src/test/ui/specialization/issue-38091.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-38091.rs:1:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete

error[E0275]: overflow evaluating the requirement `T: Iterate<'_>`
  --> $DIR/issue-38091.rs:8:13
   |
LL | impl<'a, T> Iterate<'a> for T
   |             ^^^^^^^^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`issue_38091`)
note: required because of the requirements on the impl of `Check` for `T`
  --> $DIR/issue-38091.rs:18:13
   |
LL | impl<'a, T> Check for T where <T as Iterate<'a>>::Ty: Valid {}
   |             ^^^^^     ^
note: required because of the requirements on the impl of `Iterate<'_>` for `T`
  --> $DIR/issue-38091.rs:8:13
   |
LL | impl<'a, T> Iterate<'a> for T
   |             ^^^^^^^^^^^     ^
   = note: 126 redundant requirements hidden
   = note: required because of the requirements on the impl of `Iterate<'a>` for `T`

error[E0275]: overflow evaluating the requirement `T: Iterate<'_>`
  --> $DIR/issue-38091.rs:18:1
   |
LL | impl<'a, T> Check for T where <T as Iterate<'a>>::Ty: Valid {}
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`issue_38091`)
note: required because of the requirements on the impl of `Check` for `T`
  --> $DIR/issue-38091.rs:18:13
   |
LL | impl<'a, T> Check for T where <T as Iterate<'a>>::Ty: Valid {}
   |             ^^^^^     ^
note: required because of the requirements on the impl of `Iterate<'_>` for `T`
  --> $DIR/issue-38091.rs:8:13
   |
LL | impl<'a, T> Iterate<'a> for T
   |             ^^^^^^^^^^^     ^
   = note: 126 redundant requirements hidden
   = note: required because of the requirements on the impl of `Iterate<'a>` for `T`

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0275`.
